<resources>
    <string name="registrationpassword">FUTURAL</string>
    <string name="app_name">Karnevalisten</string>
    <string name="sign_in_button">Logga in</string>
    <string name="registration_hurra">HURRA!</string>
    <string name="registration_status">Du vill bli karnevalist.</string>
    <string name="registration_informationb4progessbar">Du är för tillfället</string>
    <string name="registration_informationafterorigressbar1">karnevalist. Vi behöver bara veta vem du är.</string>
    <string name="registration_informationafterorigressbar2">karnevalist. Vi behöver bara en bild på dig.</string>
    <string name="code_explained">Inne i AF-borgen kommer du få en kod. Den behöver du för att kunna fortsätta registreringen som karnevalist.</string>
    <string name="progress_notdone_1">karnevalist. Du måste bara fylla i hela</string>
    <string name="progress_notdone_2">formuläret!</string>
    <string name="reg_code_fail_title">Något gick fel!</string>
    <string name="reg_code_fail_msg">Du fyllde i fel lösenord, försök igen!</string>
    <string name="registration_informationbild1">Den tar du längst fram i</string>
    <string name="registration_informationbild2">disken inuti AF-Borgen.</string>
    <string name="registration_yourcreedentials">DINA UPPGIFTER!</string>
    <string name="registration_mobilenbr">Mobilnummer</string>
    <string name="no_internet_title">Ojsan</string>
    <string name="no_internet_msg">Det verkar som att du inte är ansluten till internet. Försök igen senare!</string>
    <string name="registration_choosesection_information1">Jag skulle vilja vara med i dessa sektioner:</string>
    <string name="registration_choosesection_information2">Bocka för de sektioner du är intresserad av (minst 5). \n Stjärnmarkera den sektion du är mest intresserad av.</string>
    <string name="registration_chooseintrests_information1">Detta är jag bra på/detta tycker jag är roligt:</string>
    <string name="registration_chooseintrests_information2">Bocka för det du är intresserad av (minst 3). \n Stjärnmarkera det du är mest intresserad av.</string>
    <string name="registration_submit">Skicka in</string>
    <string name="registration_submitinfo">Genom att klicka på knappen, förbinder\ndu dig att ha kul under karnevalstiden.</string>
    <string name="registration_mysections">Jag vill engagera mig i</string>
    <string name="registration_myshirtsize">Jag har tröjstorlek</string>
    <string name="registration_append">Redigera mina personuppgifter</string>
    <string name="continue_code">Lösenord</string>
    <string name="notification_title">Meddelande från Lundakarnevalen!</string>
    <string name="edit_uppg">Redigera mina uppgifter</string>
    <string name="registration_dd15_important">Superviktigt!</string>
    <string name="registration_dd15_agreement">För dessa funktioner så måste du komma på audition! Auditionstid bokas hos Nöjessektionen.</string>
    <string name="registration_dd15_ok">Ok</string>
    <string name="registration_PUL">Genom detta formulär ger du Lundakarnevalen tillåtelse att använda fotot på dig samt behandla dina personuppgifter i datorsystemet och för egna utskick i enlighet med Personuppgiftslagen (1998:204)</string>
    <string name="registration_comfirmPUL">Jag godkänner dessa villkor</string>
    <string name="registration_iwant">Jag vill vara:</string>
    <string name="sektion_500">Jag vill bara vara med! Vilken sektion spelar ingen roll.</string>
    <string name="sektion_1">Barnevalen</string>
    <string name="sektion_2">Biljetteriet</string>
    <string name="sektion_3">Blädderiet</string>
    <string name="sektion_4">Cirkusen</string>
    <string name="sektion_5">Dansen</string>
    <string name="sektion_6">Ekonomi</string>
    <string name="sektion_7">Kabarén</string>
    <string name="sektion_8">Fabriken</string>
    <string name="sektion_9">Klipperiet</string>
    <string name="sektion_10">Kommunikation</string>
    <string name="sektion_11">Krog Fine dine</string>
    <string name="sektion_12">Krog l[a]unchingpad</string>
    <string name="sektion_13">Krog Molnet</string>
    <string name="sektion_14">Krog Nangilima</string>
    <string name="sektion_15">Krog Undervatten</string>
    <string name="sektion_16">Området</string>
    <string name="sektion_17">Musiken</string>
    <string name="sektion_18">Radion</string>
    <string name="sektion_19">Revyn</string>
    <string name="sektion_20">Shoppen</string>
    <string name="sektion_21">Showen</string>
    <string name="sektion_22">Snaxeriet</string>
    <string name="sektion_23">Spexet</string>
    <string name="sektion_24">Säkerhet</string>
    <string name="sektion_25">Tombola</string>
    <string name="sektion_26">Vieriet</string>
    <string name="sektion_100">Festmästeriet - Bamba</string>
    <string name="sektion_101">Festmästeriet - VIP</string>
    <string name="sektion_102">Festmästeriet - Lager</string>
    <string name="sektion_202">Smånöjena - Undergången</string>
    <string name="sektion_203">Smånöjena - Sketcetera</string>
    <string name="sektion_204">Smånöjena - FuturalFuneral</string>
    <string name="sektion_300">Tåget - Vagn</string>
    <string name="sektion_399">Tåget - Centralt</string>
    <string name="sektion_400">Tältnöjen - Tält</string>
    <string name="sektion_499">Tältnöjen - Centralt</string>
    <string name="success_msg">Vad kul att du vill vara med!\nVi återkommer.</string>
    <string name="error">Error</string>
    <string name="fail">Något gick fel, lite oklart vad dock.</string>
    <string name="welcome">Klicka för att komma vidare!</string>
    <string name="about">Denna sida lämnades tom med meningen.</string>
    <string name="loading">Laddar…</string>
    <string name="sektion_barnevalen">Barnevalen</string>
    <string name="sektion_biljetteriet">Biljetteriet</string>
    <string name="sektion_bladderiet">Blädderiet</string>
    <string name="sektion_cirkusen">Cirkusen</string>
    <string name="sektion_dansen">Dansen</string>
    <string name="sektion_ekonomi">Ekonomi</string>
    <string name="sektion_fabriken">Fabriken</string>
    <string name="sektion_festmasteriet">Festmästeriet</string>
    <string name="sektion_filmen">Filmen</string>
    <string name="sektion_kabare">Kabaré</string>
    <string name="sektion_klipperiet">Klipperiet</string>
    <string name="sektion_kommunikation">Kommunikation</string>
    <string name="sektion_krogarna">Krogarna</string>
    <string name="sektion_omradet">Området</string>
    <string name="sektion_musiken">Musiken</string>
    <string name="sektion_nojessektionen">Nöjessektionen</string>
    <string name="sektion_radion">Radion</string>
    <string name="sektion_revyn">Revyn</string>
    <string name="sektion_shoppen">Shoppen</string>
    <string name="sektion_showen">Showen</string>
    <string name="sektion_snaxeriet">Snaxeriet</string>
    <string name="sektion_sakerhet">Säkerhet</string>
    <string name="sektion_tombola">Tombola</string>
    <string name="sektion_taget">Tåget</string>
    <string name="sektion_taltnojen">Tältnöjen</string>
    <string name="sektion_vieriet">Vieriet</string>
    <string name="dd_16">Allt! Jag kan göra vad som helst, jag vill bara vara med.</string>
    <string name="dd_1">Mat</string>
    <string name="dd_2">Dryck</string>
    <string name="dd_3">Teknik (ljud, ljus, el)</string>
    <string name="dd_4">Layout/design</string>
    <string name="dd_5">IT</string>
    <string name="dd_6">Skriva</string>
    <string name="dd_7">Fota/filma/redigering</string>
    <string name="dd_8">Administration</string>
    <string name="dd_9">Försäljning</string>
    <string name="dd_10">Säkerhet</string>
    <string name="dd_11">Bygga/snickra</string>
    <string name="dd_12">Måla/dekoration</string>
    <string name="dd_13">Sy</string>
    <string name="dd_14">Smink</string>
    <string name="dd_15">Skådespela/sjunga/dansa/spela instrument</string>
    <string name="name_name">Namn</string>
    <string name="name">Förnamn</string>
    <string name="lastname">Efternamn</string>
    <string name="postal_address">Gatuadress</string>
    <string name="zip_code">Postnummer</string>
    <string name="zip_town">Ort</string>
    <string name="password">Lösenord</string>
    <string name="phone_nr">Telefonnummer</string>
    <string name="food_prefs">Matpreferenser</string>
    <string name="terms">Studieterminer i Lund</string>
    <string name="dedication">Jag har varit engagerad i en</string>
    <string name="sexTopic">Kön</string>
    <string name="teknolagkaren">Studentkår, vilken och hur?</string>
    <string name="nationDed">Studentnation, vilken och hur?</string>
    <string name="otherStud">Annan studentikos förening?</string>
    <string name="otherDed">Annan förening?</string>
    <string name="email">E-post</string>
    <string name="email_valid">E-post igen tack!</string>
    <string name="nationTopic">Studentnation</string>
    <string name="driverLicensTopic">Körkort</string>
    <string name="shirtTopic">Tröjstorlek</string>
    <string name="login_welcome_desc_f">Välkommen in i värmen.&#160;</string>
    <string name="login_welcome_desc_l">Vänligen logga in.</string>
    <string name="login_welcome_desc_fail_f">Glömt ditt lösenord?&#160;</string>
    <string name="login_welcome_desc_fail_l">Lugn, återställ det.</string>
    <string name="reset_password_desc_f">Oroa dig inte.&#160;</string>
    <string name="reset_password_desc_l">Ange din mailadress.</string>
    <string name="register_me">Registrera mig</string>
    <string name="register_desc">Det verkar som om du inte är karnevalist än.\nJag tycker att du ska bli det.\nOmedelbums.</string>
    <string name="register_desc_login_f">Är du redan karnevalist?&#160;</string>
    <string name="register_desc_login_l">Logga in här.</string>
    <string name="pers_nr">Personnummer ååmmddxxxx</string>
    <string name="pers_nr2">Personnummer</string>
    <string name="id">Id</string>
    <string name="intressen">Intressen</string>
    <string name="karnevalist_2010">Jag var karnevalist 2010</string>
    <string name="aktiv">Vill du ha ansvar?</string>
    <string name="other">Övrigt</string>
    <string name="elseT">Övrigt</string>
    <string name="active">Aktiv</string>
    <string name="responsible">Jag vill ha ansvar</string>
    <string name="activitylevel">Jag har varit aktiv inom kår/nation/förening som</string>
    <string name="work_fulltime">Heltidare</string>
    <string name="work_styrelse">Styrelseledamot</string>
    <string name="work_forman">Förman/Utskottsansvarig</string>
    <string name="work_aktiv">Jobbare</string>
    <string name="fail_creedentials">Felaktigt ifyllda fält:</string>
    <string name="barnevalen_b1">Barnevalen är den delen av karnevalen som riktar sig till barn i alla åldrar! Det är det största av de stora nöjena och har, i skillnad från de flesta andra, ett helt omräde! Förutom en föreställning kommer det även finnas små tält och bodar där barnen för delta i aktiviteter och hyss! Man ska ha riktigt kul när man går runt på barnevalsområdet oavsett hur gammal man är och det bygger givetvis på en härlig glädje och gemenskap mellan de som är engagerade!</string>
    <string name="barnevalen_b2">Man kan göra massor av olika saker i Barnevalen! Laga mat till alla som är med, sy kläder och sminka de på scen, ordna med fester, bygga upp nöjen på området, se till att allt flyter på, stå i baren, och bygga dekor är några av de områden som det kommer behövas glada barnevalister på!</string>
    <string name="barnevalen_b3">Vi räknar med att ta med 130 - 150 fantastiska barnevalister!</string>
    <string name="map_right_now">VAR ÄR KARNEVALISTERNA\nJUST NU?</string>
    <string name="map_karnevalister">KARNEVALISTER</string>
    <string name="desc_map">map</string>
</resources>