<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/horizontal_margin">
    <se.lundakarnevalen.widget.LKTextViewBold
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_half"
        android:text="@string/reset_password_desc_f"
        android:textColor="#FFFFFF"
        android:id="@+id/reset_password_desc_f" />
     <se.lundakarnevalen.widget.LKTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_margin_half"
        android:layout_toRightOf="@id/reset_password_desc_f"
        android:text="@string/reset_password_desc_l"
        android:textColor="#FFFFFF"
        android:id="@+id/reset_password_desc_l" />
     <se.lundakarnevalen.widget.LKEditText 
         android:layout_width="fill_parent"
         android:layout_height="wrap_content"
         android:textColor="#FFFFFF"
         android:layout_marginTop="@dimen/vertical_margin_half"
         android:inputType="textEmailAddress"
         android:layout_below="@id/reset_password_desc_f"
         android:hint="@string/email"/>
</RelativeLayout>
